refactor: user result 기록이 없을 경우 텍스트 표시 추가

--- a/apps/web/containers/Mypage/ResultList/index.module.scss
+++ b/apps/web/containers/Mypage/ResultList/index.module.scss
@@ -5,3 +5,13 @@
   @include m.flexboxColumn(_, _);
   gap: 20px;
 }
+.nonContent {
+  width: 100%;
+  height: 40vh;
+  @include m.flexboxColumn();
+
+  p {
+    font-size: var(--font-size-xl);
+    color: var(--color-gray-9);
+  }
+}
