refactor: sideNavBar - 로그인 버튼 추가

--- a/apps/web/containers/layout/SideNavBar/index.module.scss
+++ b/apps/web/containers/layout/SideNavBar/index.module.scss
@@ -49,6 +49,16 @@
 
   background-color: rgba(88, 88, 88, 0.357);
 
+  .logoLink {
+    margin-top: 15px;
+  }
+
+  .loginBtn {
+    @include m.borderStyles(1.5px);
+    padding: 5px;
+    background-color: var(--color-bg-ivory);
+  }
+
   > ul {
     width: 45%;
     height: 100%;
