fix: admin일 경우, 삭제 버튼만 보이도록 처리 - 댓글 없을 때, 문구가 보이도록

--- a/apps/web/components/Comments/CommentList/index.module.scss
+++ b/apps/web/components/Comments/CommentList/index.module.scss
@@ -10,4 +10,12 @@
     gap: 10px;
     margin-bottom: 5px;
   }
+
+  .noComments {
+    padding: 10px;
+    p,
+    h3 {
+      color: var(--color-gray-9);
+    }
+  }
 }
