refactor: about - image 변경

--- a/apps/web/containers/About/index.module.scss
+++ b/apps/web/containers/About/index.module.scss
@@ -9,6 +9,11 @@
     margin: auto;
     padding: 20px 0;
 
+    .pangLogo{
+      background-color: var(--color-bg-yellow);
+      border-radius: 1rem;
+    }
+
     span {
       font-weight: bold;
     }
