--- a/apps/web/components/Items/ResultItem/index.module.scss
+++ b/apps/web/components/Items/ResultItem/index.module.scss
@@ -1,55 +1,78 @@
 @use 'styles/mixins' as m;
 
-.resultItemWrap {
-  width: 100%;
-  height: 210px;
-  @include m.borderStyles();
-  @include m.flexbox(between);
-  overflow: hidden;
+.wrap {
+  position: relative;
 
-  .imgWrap {
-    width: 40%;
-    height: 100%;
-    position: relative;
-    overflow: hidden;
+  .titleWrap {
+    width: 100%;
+    position: absolute;
+    bottom: 0;
+    padding: 5px 10px;
+    background-color: rgba(0, 0, 0, 0.7);
+    border-radius: 0 0 0.5rem 0.5rem;
 
-    .image {
-      object-fit: cover;
-      object-position: center;
+    @include m.flexbox(between);
+
+    h2 {
+      @include m.textEllipsis();
+      font-size: var(--font-size-m);
+      width: 80%;
+      overflow: hidden;
+      font-weight: 500;
+      color: var(--color-white);
+    }
+    .date {
+      font-size: var(--font-size-s);
+      color: var(--color-gray-c);
     }
   }
 
-  .contentBox {
-    width: 60%;
-    height: 100%;
-    white-space: pre-wrap;
-    @include m.flexboxColumn(between, end);
+  .resultItemWrap {
+    width: 100%;
+    height: 245px;
+    @include m.flexbox(between);
+    @include m.borderStyles();
+    overflow: hidden;
 
-    padding: 10px;
-
-    .title {
-      @include m.textEllipsis();
-      padding: 0 6px 5px;
-      border-bottom: 1.5px dashed var(--color-gray-a);
-      font-size: 1rem;
-    }
-
-    .content {
-      width: 100%;
-      padding: 0 5px;
-
-      height: 70%;
-      font-size: 0.9rem;
-
+    .imgWrap {
+      width: 40%;
+      height: 100%;
+      position: relative;
       overflow: hidden;
-      word-wrap: break-word;
-      word-break: keep-all;
-      text-overflow: ellipsis;
+
+      .image {
+        object-fit: cover;
+        object-position: center;
+      }
     }
 
-    .date {
-      font-size: var(--font-size-s);
-      color: var(--color-gray-9);
+    .contentBox {
+      width: 60%;
+      height: 100%;
+      white-space: pre-wrap;
+      @include m.flexboxColumn(start, end);
+      gap: 10px;
+      padding: 10px;
+
+      .title {
+        @include m.textEllipsis();
+        padding: 0 6px 5px;
+        border-bottom: 1.5px dashed var(--color-gray-a);
+        font-size: 1rem;
+      }
+
+      .content {
+        width: 100%;
+        padding: 0 5px;
+
+        height: 70%;
+        font-size: 0.9rem;
+
+        overflow: hidden;
+        word-wrap: break-word;
+        word-break: keep-all;
+        text-overflow: ellipsis;
+      }
     }
   }
 }
