--- a/apps/web/components/Items/ContentItem/index.module.scss
+++ b/apps/web/components/Items/ContentItem/index.module.scss
@@ -1,6 +1,6 @@
 @use 'styles/mixins' as m;
 
-$icon-size: 0.8rem;
+$icon-size: 0.9rem;
 
 .wrap {
   width: 100%;
@@ -29,13 +29,13 @@ $icon-size: 0.8rem;
     padding: 3px 10px;
 
     .title {
-      font-size: var(--font-size-m);
+      font-size: var(--font-size-l);
       @include m.textEllipsis();
       font-weight: var(--font-weight-bold);
     }
 
     .countBox {
-      font-size: var(--font-size-s);
+      font-size: 1rem;
       @include m.flexbox(between);
       gap: 0.8rem;
 
@@ -44,7 +44,7 @@ $icon-size: 0.8rem;
         gap: 0.3rem;
 
         span {
-          margin-top: -3px;
+          margin-top: -2px;
         }
 
         .playIcon {
