--- a/apps/web/components/ModalContent/index.module.scss
+++ b/apps/web/components/ModalContent/index.module.scss
@@ -1,5 +1,7 @@
 @use 'styles/mixins' as m;
 
+$width: 320px;
+
 .wrap {
   max-width: var(--max-width);
   min-width: var(--min-width);
@@ -14,10 +16,10 @@
   overflow: hidden;
 
   .modalContainer {
-    width: 250px;
+    width: $width;
     position: absolute;
     top: 35%;
-    left: calc(50% - 125px);
+    left: calc(50% - ($width/2));
 
     border-radius: 0.5rem;
     background-color: var(--color-bg-ivory);
@@ -47,7 +49,8 @@
           gap: 40px;
 
           button {
-            padding: 5px 12px;
+            padding: 7px 15px;
+            color: var(--font-color);
             @include m.borderStyles();
           }
           .checkBtn {
