refactor: Pagination으로 변경, 회원 탈퇴 버튼 이동 - 무한 스크롤 보다 페이지네이션이 효율적 - 회원 탈퇴를 맨 아래로 이동

--- a/apps/web/components/Items/ResultItem/index.module.scss
+++ b/apps/web/components/Items/ResultItem/index.module.scss
@@ -2,6 +2,7 @@
 
 .wrap {
   position: relative;
+  width: 100%;
 
   .titleWrap {
     width: 100%;
@@ -68,7 +69,7 @@
         height: 70%;
         font-size: 0.9rem;
 
-        overflow: hidden;
+        overflow: auto;
         word-wrap: break-word;
         word-break: keep-all;
         text-overflow: ellipsis;
