--- a/apps/web/containers/Mypage/ResultList/index.module.scss
+++ b/apps/web/containers/Mypage/ResultList/index.module.scss
@@ -3,8 +3,39 @@
 .resultWrap {
   width: 100%;
   @include m.flexboxColumn(_, _);
-  gap: 20px;
+  gap: 30px;
 }
+
+.pagination {
+  @include m.flexbox();
+  margin: 10px;
+  gap: 10px;
+
+  button {
+    padding: 3px 5px;
+    cursor: pointer;
+    color: var(--color-gray-6);
+    font-size: var(--font-size-m);
+  }
+
+  .pageButton {
+    font-size: 0.9rem;
+    margin: 0 10px;
+    padding: 5px 10px;
+  }
+
+  .pageButton:disabled {
+    cursor: not-allowed;
+    opacity: 0.5;
+  }
+
+  .activePage {
+    font-weight: bold;
+    color: var(--color-bg-deep-pink);
+    border-bottom: 2px solid var(--color-bg-green);
+  }
+}
+
 .nonContent {
   width: 100%;
   height: 40vh;
