refactor: 플레이어 수 글자 포인트 주기

--- a/apps/web/containers/ContentContainers/Preview/index.module.scss
+++ b/apps/web/containers/ContentContainers/Preview/index.module.scss
@@ -37,6 +37,10 @@
       width: 100%;
       @include m.flexboxColumn();
       gap: 5px;
+
+      span {
+        font-weight: var(--font-weight-bold);
+      }
     }
   }
 }
