--- a/apps/web/containers/Mypage/index.module.scss
+++ b/apps/web/containers/Mypage/index.module.scss
@@ -52,3 +52,14 @@
     }
   }
 }
+
+.nonLoginContainer {
+  @include m.flexboxColumn();
+  gap: 30px;
+  margin: 50px 0;
+
+  .nonLoginText {
+    color: var(--color-gray-6);
+    margin: 50px;
+  }
+}
