--- a/apps/web/styles/_globals.scss
+++ b/apps/web/styles/_globals.scss
@@ -22,6 +22,9 @@
 .yellow {
   background-color: var(--color-bg-yellow);
 }
+.ivory {
+  background-color: var(--color-bg-ivory);
+}
 .deepPink {
   background-color: var(--color-bg-deep-pink);
 }
