feat : app page 추가 및 네비등록

--- a/apps/web/containers/layout/SideNavBar/index.module.scss
+++ b/apps/web/containers/layout/SideNavBar/index.module.scss
@@ -99,6 +99,10 @@
       .mypageIcon {
         @include m.iconStyles(1rem, 1rem, '/svgs/user.svg');
       }
+
+      .noticeIcon {
+        @include m.iconStyles(1rem, 1rem, '/svgs/bullhorn.svg');
+      }
     }
   }
 
