--- a/apps/web/containers/Notices/NoticeRegister/index.module.scss
+++ b/apps/web/containers/Notices/NoticeRegister/index.module.scss
@@ -48,3 +48,14 @@
     gap: 20px;
   }
 }
+
+.nonLoginContainer {
+  @include m.flexboxColumn();
+  gap: 30px;
+  margin: 50px 0;
+
+  .nonLoginText {
+    color: var(--color-gray-6);
+    margin: 50px;
+  }
+}
