--- a/apps/web/containers/Notices/Notice/index.module.scss
+++ b/apps/web/containers/Notices/Notice/index.module.scss
@@ -12,8 +12,11 @@
       width: 100%;
       min-height: 150px;
       background-color: var(--color-bg-ivory);
-      padding: 10px;
+      padding: 15px;
       border-radius: 1rem;
+
+      white-space: pre-wrap;
+      word-wrap: break-word;
     }
   }
 
