feat: 이미지 카드 크기 조절

--- a/apps/web/containers/ContentResult/index.module.scss
+++ b/apps/web/containers/ContentResult/index.module.scss
@@ -5,6 +5,10 @@
   @include m.flexboxColumn();
   gap: 30px;
 
+  .imageWrap {
+    width: 80%;
+  }
+
   h3 {
     text-align: center;
     font-size: var(--font-size-xl);
