--- a/apps/web/components/lib/CoupangPage/index.module.scss
+++ b/apps/web/components/lib/CoupangPage/index.module.scss
@@ -1,12 +1,18 @@
 @use 'styles/mixins' as m;
 
 .wrap {
+  width: 100%;
   height: 100vh;
+  position: fixed;
+  top: 0;
+  z-index: 900;
+  background: linear-gradient(to bottom, #ffffffef 10%, #0b2e75 80%);
   @include m.flexboxColumn();
 
   .contentsWrap {
-    @include m.flexboxColumn();
-    gap: 50px;
+    width: 100%;
+    height: 100vh;
+    @include m.flexboxColumn(between, center);
 
     .coupangButton {
       padding: 20px 30px;
@@ -16,14 +22,7 @@
       border-radius: 1rem;
     }
 
-    .textBox {
-      p {
-        text-align: center;
-        color: #fff;
-      }
-    }
-
-    .bannerWrap {
+    .buttonWrap {
       position: relative;
 
       .closeBtn {
@@ -32,6 +31,15 @@
         color: #333;
         position: absolute;
         right: 0;
+        background-color: white;
+      }
+
+      .textBox {
+        p {
+          text-align: center;
+          color: #fff;
+        }
+        margin-top: 30px;
       }
     }
   }
