--- a/apps/web/containers/ContentResult/index.module.scss
+++ b/apps/web/containers/ContentResult/index.module.scss
@@ -3,28 +3,33 @@
 .wrap {
   width: 100%;
   @include m.flexboxColumn();
-  gap: 30px;
 
-  .imageWrap {
-    width: 80%;
-  }
+  .contentWrap {
+    width: 100%;
+    @include m.flexboxColumn();
+    gap: 30px;
 
-  h3 {
-    text-align: center;
-    font-size: var(--font-size-xl);
-  }
+    .imageWrap {
+      width: 80%;
+    }
 
-  .content {
-    width: 90%;
-    border: 1.5px dashed var(--color-gray-a);
-    border-radius: 1rem;
+    h3 {
+      text-align: center;
+      font-size: var(--font-size-xl);
+    }
 
-    white-space: pre-wrap;
-    word-break: keep-all;
-    line-height: 1.7;
+    .content {
+      width: 90%;
+      border: 1.5px dashed var(--color-gray-a);
+      border-radius: 1rem;
 
-    .contentText {
-      padding: 15px;
+      white-space: pre-wrap;
+      word-break: keep-all;
+      line-height: 1.7;
+
+      .contentText {
+        padding: 15px;
+      }
     }
   }
 }
