--- a/apps/web/components/lib/CoupangPage/index.module.scss
+++ b/apps/web/components/lib/CoupangPage/index.module.scss
@@ -2,7 +2,6 @@
 
 .wrap {
   width: 100%;
-  height: 100vh;
   position: fixed;
   top: 0;
   z-index: 900;
@@ -14,16 +13,16 @@
     height: 100vh;
     @include m.flexboxColumn(between, center);
 
-    .coupangButton {
-      padding: 20px 30px;
-      font-size: 1.2rem;
-      background-color: #faef9a;
-      color: var(--font-color);
-      border-radius: 1rem;
-    }
-
     .buttonWrap {
       position: relative;
+
+      .coupangButton {
+        padding: 20px 30px;
+        font-size: 1.2rem;
+        background-color: #faef9a;
+        color: var(--font-color);
+        border-radius: 1rem 0 1rem 0;
+      }
 
       .closeBtn {
         width: 20px;
@@ -38,6 +37,9 @@
         p {
           text-align: center;
           color: #fff;
+          span {
+            font-weight: var(--font-weight-bold);
+          }
         }
         margin-top: 30px;
       }
