feat : 카카오 아이콘 변경 및 노션 링크 업데이트

--- a/apps/web/containers/About/index.module.scss
+++ b/apps/web/containers/About/index.module.scss
@@ -52,7 +52,10 @@
     }
 
     .talkIcon {
-      @include m.iconStyles(2rem, 2rem, '/images/kakaotalk_sharing.png');
+      @include m.iconStyles(1.7rem, 1.7rem, '/svgs/kakao.svg');
+    }
+    .notion {
+      @include m.iconStyles(1.7rem, 1.7rem, '/svgs/notion.svg');
     }
   }
 }
