feat: 카카오톡 아이콘 dav info에서 footer로 이동

--- a/apps/web/containers/layout/Footer/index.module.scss
+++ b/apps/web/containers/layout/Footer/index.module.scss
@@ -29,6 +29,9 @@ $icon-size: 1rem;
       .instagramIcon {
         @include m.iconStyles(1.4rem, 1.4rem, '/svgs/instagram.svg');
       }
+      .talkIcon {
+        @include m.iconStyles(1.2rem, 1.2rem, '/svgs/kakao.svg');
+      }
     }
 
     .docsBox {
