--- a/apps/web/components/Comments/index.module.scss
+++ b/apps/web/components/Comments/index.module.scss
@@ -22,6 +22,7 @@
     .commentInput {
       width: 70%;
       padding: 8px;
+      font-size: 16px;
     }
     .textCount {
       text-align: end;
